--- a/chart.css
+++ b/chart.css
@@ -1,7 +1,20 @@
 div#chart text.c3-axis-x-label {
   font-size: 14px;
+  font-family: sans-serif;
 }
 
 div#chart text.c3-axis-y-label {
+  font-size: 14px;
+  font-family: sans-serif;
+  margin: 15;
+}
+
+h1 {
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.c3-legend-item {
+  margin: 10px;
   font-size: 14px;
 }
