--- a/chart.css
+++ b/chart.css
@@ -14,6 +14,10 @@ h1 {
   font-family: sans-serif;
 }
 
+h6 {
+  font-style: bold;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
@@ -23,4 +27,8 @@ table,
 th,
 td {
   border: 1px solid black;
+  text-align: center;
+}
+tr:hover {
+  background-color: #f5f5f5;
 }
