--- a/chart.css
+++ b/chart.css
@@ -14,6 +14,19 @@ h1 {
   font-family: sans-serif;
 }
 
+h4 {
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.caption {
+  font-size: 14px;
+}
+
+.tableHeading {
+  font-size: 14px;
+}
+
 h6 {
   font-style: bold;
 }
