--- a/chart.css
+++ b/chart.css
@@ -59,3 +59,31 @@ tr:hover {
   text-align: center;
   font-size: 14px;
 }
+
+.singleBlockCode {
+  background-color: #eee;
+  border: 1px solid #999;
+  display: block;
+  padding: 10px;
+  width: fit-content;
+  margin-top: 14px;
+  margin-bottom: 14px;
+  margin-left: 14px;
+  margin-right: 14px;
+}
+
+.batchCode {
+  display: flex;
+  justify-content: space-around;
+}
+
+.singleCode {
+  flex: auto;
+  background-color: #eee;
+  border: 1px solid #999;
+  padding: 10px;
+  width: fit-content;
+  flex-grow: 2;
+  margin-left: 8px;
+  margin-right: 8px;
+}
