--- a/chart.css
+++ b/chart.css
@@ -14,6 +14,11 @@ h1 {
   font-family: sans-serif;
 }
 
+h5 {
+  text-align: center;
+  font-family: sans-serif;
+}
+
 h4 {
   text-align: center;
   font-family: sans-serif;
@@ -65,7 +70,7 @@ tr:hover {
   border: 1px solid #999;
   display: block;
   padding: 10px;
-  width: fit-content;
+  width: 800px;
   margin-top: 14px;
   margin-bottom: 14px;
   margin-left: 14px;
