--- a/chart.css
+++ b/chart.css
@@ -30,7 +30,7 @@ h4 {
 }
 
 .tableHeading {
-  font-size: 14px;
+  font-size: 16px;
   text-align: center;
 }
 
@@ -92,4 +92,20 @@ tr:hover {
   flex-grow: 2;
   margin-left: 8px;
   margin-right: 8px;
+}
+
+.equation {
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 12px;
+  margin-right: 12px;
+  align-items: center;
+}
+
+div.section {
+}
+
+p {
+  text-indent: 50px;
+  line-height: 1.4;
 }
