--- a/chart.css
+++ b/chart.css
@@ -53,7 +53,7 @@ tr:hover {
   background-color: #f5f5f5;
 }
 
-.comparisonCharts {
+#comparisonCharts {
   display: flex;
 }
 
@@ -102,10 +102,17 @@ tr:hover {
   align-items: center;
 }
 
-div.section {
-}
-
 p {
   text-indent: 50px;
   line-height: 1.4;
+}
+
+a#scroll {
+  color: blue;
+  text-decoration: underline;
+}
+
+#scroll:hover {
+  color: grey;
+  cursor: pointer;
 }
