--- a/chart.css
+++ b/chart.css
@@ -116,3 +116,33 @@ a#scroll {
   color: grey;
   cursor: pointer;
 }
+
+div.refs {
+  display: inline;
+}
+
+p.refs {
+  display: inline;
+  text-indent: 0px;
+  text-align: justify;
+}
+
+ol#references {
+  list-style: none;
+  counter-reset: x;
+}
+ol#references li {
+  counter-increment: x;
+}
+ol#references li::before {
+  content: '[' counter(x) ']   ';
+  color: black;
+  font-family: monospace;
+  font-size: 16px;
+  padding-right: 12px;
+}
+
+li {
+  display: inline-flex;
+  padding-bottom: 12px;
+}
