--- a/chart.css
+++ b/chart.css
@@ -46,11 +46,16 @@ table {
 table,
 th,
 td {
-  border: 1px solid black;
   text-align: center;
 }
 tr:hover {
   background-color: #f5f5f5;
+}
+
+table.result_table,
+table.result_table th,
+table.result_table td {
+  border: 1px solid black;
 }
 
 #comparisonCharts {
@@ -133,6 +138,7 @@ ol#references {
 }
 ol#references li {
   counter-increment: x;
+  display: inline-flex;
 }
 ol#references li::before {
   content: '[' counter(x) ']   ';
@@ -143,6 +149,5 @@ ol#references li::before {
 }
 
 li {
-  display: inline-flex;
   padding-bottom: 12px;
 }
